# estructurasSelectivas

./: CMakeLists.txt  README.md  ejemplo1.c  ejemplo2.c  ejemplo3.c  ejercicio1.c  ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio5.c  ejercicio6.c  ejercicio7.c  ejercicio8.c  ejercicio9.c
estructurasDobles/: ejeD1.c  ejeD2.c
estructurasMultiples/: ejeD3.c
